[gd_scene load_steps=2 format=3 uid="uid://nkuhinq3qnn"]

[ext_resource type="Script" uid="uid://din5v4exb5ikl" path="res://GanttBar/GanttBar.gd" id="1_bar"]

[node name="GanttBar" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_bar")

[node name="Panel" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 202.0
offset_bottom = 25.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
text = "Task"

[node name="HoverPopup" type="PopupPanel" parent="."]
size = Vector2i(260, 100)

[node name="Margin" type="MarginContainer" parent="HoverPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 256.0
offset_bottom = 96.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="HoverPopup/Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="HoverPopup/Margin/VBox"]
layout_mode = 2
theme_override_constants/line_spacing = 2
text = "Details"

[node name="Body" type="Label" parent="HoverPopup/Margin/VBox"]
layout_mode = 2
text = "Coming soonâ€¦"
autowrap_mode = 2

[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="mouse_entered" from="Panel/Label" to="." method="_on_label_mouse_entered"]
